Add SocialSide component with social media links and email contact
- Created a new SocialSide.vue component to display social media icons (GitHub, Instagram, YouTube, LinkedIn) and an email link.
- Implemented responsive design with vertical layout for the email and social icons.
- Added hover effects for icons and email link for better user interaction.
- Included a vertical separator for visual separation of social icons and email.
- Styled the component with scoped CSS for better encapsulation.

--- a/2.0/my-portfolio/package.json
+++ b/2.0/my-portfolio/package.json
@@ -8,6 +8,7 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@fluentui/svg-icons": "^1.1.305",
     "@quasar/extras": "^1.0.0",
     "core-js": "^3.8.3",
     "pinia": "^3.0.3",
